# python-drm

./: LICENSE  README.md  drm.py  pyproject.toml
drm/: __init__.py
src/drm/: __init__.py
src/drm/tegra/: __init__.py  vic42.py
src/drm/tools/: drm.py  dumb.py  format.py  kms-info.py  kms-modetest.py  tegra.py  utils.py
tests/: dumb.py  format.py  kms-info.py  kms-modetest.py
