[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "python-drm"
version = "0.0.1"
authors = [
	{ name = "Thierry Reding", email = "thierry.reding@gmail.com" },
]
description = "Python bindings for DRM/KMS"
readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.8"

classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thierryreding/python-drm"
"Bug Tracker" = "https://github.com/thierryreding/python-drm/issues"
